# task.fastapi-task-tracker

./: .env  .gitignore  README.md  fixtures.json  pyproject.toml  ruff.toml
migrations/: env.py
migrations/versions/: 4cb1ae070cb2_initial_tables.py
project/: auth.py  background_tasks.py  conf.py  db.py  db_models.py  enums.py  logger.py  manage.py  models.py
project/app/: init.py  main.py
project/app/routers/: login.py  tasks.py
